--- a/kelk/Cargo.toml
+++ b/kelk/Cargo.toml
@@ -8,6 +8,11 @@ repository = "https://github.com/zarbchan/kelk"
 description = "Kelk is a Low-level interface for interacting with the smart contract Wasm executor."
 
 
-
 [profile.release]
 lto = true
+
+[dependencies]
+schemars = "0.8"
+serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
+thiserror = "1.0"
+serde_json = "1.0"
