--- a/kelk/Cargo.toml
+++ b/kelk/Cargo.toml
@@ -12,7 +12,10 @@ description = "Kelk is a Low-level interface for interacting with the smart cont
 lto = true
 
 [dependencies]
-schemars = "0.8"
-serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
+serde = { version = "1.0", default-features = false, features = [
+    "derive",
+    "alloc",
+] }
 thiserror = "1.0"
 serde_json = "1.0"
+kelk-derive = { path = "derive" }
