--- a/examples/calculator/Cargo.toml
+++ b/examples/calculator/Cargo.toml
@@ -6,11 +6,11 @@ authors = ["Zarb development team <admin@zarb.network>"]
 
 [dependencies]
 kelk = { path = "../../kelk" }
-serde = { version = "1.0", default-features = false, features = ["derive"] }
+minicbor = { version = "0.11.1", features = ["half", "derive"] }
+minicbor-derive = "0.7.1"
 
 [lib]
 name = "calculator"
-path = "lib.rs"
 crate-type = ["cdylib", "rlib"]
 
 [profile.release]
