--- a/examples/hello_world/.cargo/config
+++ b/examples/hello_world/.cargo/config
@@ -1,5 +1,5 @@
 [target.wasm32-unknown-unknown]
 rustflags = [
-    "-C", "link-arg=-z", "-C", "link-arg=stack-size=65536", "-C", "link-arg=--import-memory",
+    "-C", "link-arg=-z", "-C", "link-arg=stack-size=65536",
 
 ]
