--- a/examples/hello_world/Cargo.toml
+++ b/examples/hello_world/Cargo.toml
@@ -10,9 +10,15 @@ kelk = {path = "../../kelk"}
 [lib]
 name = "hello_world"
 path = "lib.rs"
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 
 [profile.release]
-panic = "abort"
+opt-level = 3
+debug = false
+rpath = false
 lto = true
-opt-level=3
+debug-assertions = false
+codegen-units = 1
+panic = 'abort'
+incremental = false
+overflow-checks = true
