--- a/kelk/env/Cargo.toml
+++ b/kelk/env/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kelk-env"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 authors = ["Zarb development team <admin@zarb.network>"]
 license = "MIT"
@@ -13,3 +13,6 @@ minicbor = { version = "0.11", features = ["half", "derive"] }
 minicbor-derive = "0.7"
 kelk-derive = { path = "../derive" }
 wee_alloc = { version = "0.4", default-features = false }
+
+[dev-dependencies]
+wasm-bindgen-test = "0.3"
