--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,10 +1,12 @@
-on:
-  push:
-    branches:
-    - main
-  pull_request:
-    branches:
-    - main
+# on:
+#   push:
+#     branches:
+#     - main
+#   pull_request:
+#     branches:
+#     - main
+on: [push, pull_request]
+
 
 name: Coverage and linting
 
