--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,12 +1,10 @@
-# on:
-#   push:
-#     branches:
-#     - main
-#   pull_request:
-#     branches:
-#     - main
-on: [push, pull_request]
-
+on:
+  push:
+    branches:
+    - main
+  pull_request:
+    branches:
+    - main
 
 name: Coverage and linting
 
