--- a/.github/workflows/x86-64.yml
+++ b/.github/workflows/x86-64.yml
@@ -6,7 +6,7 @@ on:
     branches:
     - main
 
-name: Coverage and linting
+name: Coverage and linting (x86-64)
 
 jobs:
   all:
@@ -16,18 +16,16 @@ jobs:
       - name: Install Rust
         run: |
           rustup toolchain install nightly --component llvm-tools-preview rustfmt clippy
-          rustup toolchain install nightly --target wasm32-unknown-unknown
 
       - name: Install cargo-llvm-cov
         run: curl -LsSf https://github.com/taiki-e/cargo-llvm-cov/releases/latest/download/cargo-llvm-cov-x86_64-unknown-linux-gnu.tar.gz | tar xzf - -C ~/.cargo/bin
 
       - name: Generate code coverage
-        run: cargo llvm-cov --all-targets --all-features --workspace --lcov --output-path lcov.info
+        run: cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
-          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
           files: lcov.info
           fail_ci_if_error: true
 
@@ -35,4 +33,4 @@ jobs:
         run: cargo +nightly fmt --all -- --check
 
       - name: Clippy check
-        run: cargo +nightly clippy --all-targets --all-features -- -D warnings
+        run: cargo +nightly clippy --all-features -- -D warnings
