--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Install Rust
         run: |
           rustup toolchain install nightly --component rustfmt clippy
+          rustup toolchain install nightly --target wasm32-unknown-unknown
 
       - name: Compiling and testing ${{ matrix.examples }}
         run: |
