--- a/kelk/env/Cargo.toml
+++ b/kelk/env/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kelk-env"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 authors = ["Zarb development team <admin@zarb.network>"]
 license = "MIT"
@@ -12,6 +12,7 @@ description = "Kelk-env is a Low-level interface for interacting with Tanour (Wa
 minicbor = { version = "0.11", features = ["half", "derive"] }
 minicbor-derive = "0.7"
 kelk-derive = { path = "../derive" }
+kelk-lib = { path = "../lib" }
 wee_alloc = { version = "0.4", default-features = false }
 
 [dev-dependencies]
