--- a/examples/calculator/Cargo.toml
+++ b/examples/calculator/Cargo.toml
@@ -8,6 +8,7 @@ authors = ["Zarb development team <admin@zarb.network>"]
 kelk-env = { path = "../../kelk/env" }
 minicbor = { version = "0.11.1", features = ["half", "derive"] }
 minicbor-derive = "0.7.1"
+wee_alloc = { version = "0.4", default-features = false }
 
 [lib]
 name = "calculator"
