--- a/.github/workflows/x86-64.yml
+++ b/.github/workflows/x86-64.yml
@@ -15,7 +15,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install Rust
         run: |
-          rustup toolchain install nightly --component llvm-tools-preview rustfmt clippy
+          rustup component add llvm-tools-preview
+          rustup component add  rustfmt clippy --toolchain nightly
 
       - name: Install cargo-llvm-cov
         run: curl -LsSf https://github.com/taiki-e/cargo-llvm-cov/releases/latest/download/cargo-llvm-cov-x86_64-unknown-linux-gnu.tar.gz | tar xzf - -C ~/.cargo/bin
