--- a/.github/workflows/x86-64.yml
+++ b/.github/workflows/x86-64.yml
@@ -15,14 +15,13 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install Rust
         run: |
-          rustup component add llvm-tools-preview
-          rustup component add  rustfmt clippy --toolchain nightly
+          rustup toolchain install --component llvm-tools-preview rustfmt clippy
 
       - name: Install cargo-llvm-cov
         run: curl -LsSf https://github.com/taiki-e/cargo-llvm-cov/releases/latest/download/cargo-llvm-cov-x86_64-unknown-linux-gnu.tar.gz | tar xzf - -C ~/.cargo/bin
 
       - name: Generate code coverage
-        run: cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info
+        run: cargo +nightly llvm-cov --all-features --workspace --lcov --output-path lcov.info
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
