--- a/examples/erc_token/Cargo.toml
+++ b/examples/erc_token/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
-name = "erc_token"
+name = "erc20"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 
 [dependencies]
@@ -14,7 +12,7 @@ minicbor-derive = "0.7.1"
 wee_alloc = { version = "0.4", default-features = false }
 
 [lib]
-name = "calculator"
+name = "erc20"
 crate-type = ["cdylib", "rlib"]
 
 [profile.release]
