--- a/kelk/env/Cargo.toml
+++ b/kelk/env/Cargo.toml
@@ -12,7 +12,9 @@ description = "Kelk-env is a Low-level interface for interacting with Tanour (Wa
 minicbor = { version = "0.11", features = ["half", "derive"] }
 minicbor-derive = "0.7"
 kelk-derive = { path = "../derive" }
-kelk-lib = { path = "../lib" }
+doc-comment = "0.3"
+
 
 [dev-dependencies]
+doc-comment = "0.3"
 wasm-bindgen-test = "0.3"
