--- a/examples/calculator/Cargo.toml
+++ b/examples/calculator/Cargo.toml
@@ -18,6 +18,7 @@ crate-type = ["cdylib", "rlib"]
 opt-level = 3
 debug = false
 rpath = false
+strip = true
 lto = true
 debug-assertions = false
 codegen-units = 1
