Storage string APIs (#25)
* Updating storage APIs and adding string functions

* Fixing calculator contract issues

* Adding test for read/write string

* Updating mod.rs for bst and vector

* Updating github action for examples

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Compiling and testing ${{ matrix.examples }}
         run: |
           cd examples/${{ matrix.examples }}
-          cargo +nightly fmt --all -- --check
+          cargo +nightly fmt -- --check
           cargo +nightly clippy --all-features -- -D warnings
-          cargo +nightly test --all
+          cargo +nightly test
           cargo +nightly build --target wasm32-unknown-unknown --release
