--- a/examples/calculator/Cargo.toml
+++ b/examples/calculator/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Zarb development team <admin@zarb.network>"]
 
 [dependencies]
 kelk-env = { path = "../../kelk/env" }
+kelk-derive = { path = "../../kelk/derive" }
 minicbor = { version = "0.11.1", features = ["half", "derive"] }
 minicbor-derive = "0.7.1"
 wee_alloc = { version = "0.4", default-features = false }
