Adding homepage to cargo.toml

--- a/kelk/derive/Cargo.toml
+++ b/kelk/derive/Cargo.toml
@@ -3,6 +3,8 @@ name = "kelk-derive"
 version = "0.2.0"
 edition = "2021"
 authors = ["Zarb development team <admin@zarb.network>"]
+license = "MIT"
+homepage = "https://zarb.network/"
 repository = "https://github.com/zarbchan/kelk"
 description = "Kelk-derive contains derive macros for auto-generated code used in Zarb blockchain."
 
