--- a/kelk/lib/Cargo.toml
+++ b/kelk/lib/Cargo.toml
@@ -10,4 +10,4 @@ description = "Kelk-lib is the standard librry for wasm based contracts in Zarb 
 
 
 [dependencies]
-kelk-env = { path = "../env" }
+kelk-env = "0.2.2"
