--- a/kelk/env/Cargo.toml
+++ b/kelk/env/Cargo.toml
@@ -12,7 +12,7 @@ description = "Kelk-env is a Low-level interface for interacting with Tanour (Wa
 [dependencies]
 minicbor = { version = "0.11", features = ["half", "derive"] }
 minicbor-derive = "0.7"
-kelk-derive = { path = "../derive" }
+kelk-derive = "0.2.0"
 doc-comment = "0.3"
 
 
