Adding Address type

--- a/kelk/lib/Cargo.toml
+++ b/kelk/lib/Cargo.toml
@@ -11,3 +11,4 @@ description = "Kelk-lib is the standard librry for wasm based contracts in Zarb 
 
 [dependencies]
 kelk-env = "0.2.2"
+minicbor = { version = "0.18", features = ["half", "derive"] }
