--- a/crates/env/Cargo.toml
+++ b/crates/env/Cargo.toml
@@ -10,12 +10,7 @@ description = "Kelk-env is a Low-level interface for interacting with Tanour (Wa
 
 
 [dependencies]
-minicbor = { version = "0.11", features = ["half", "derive"] }
-minicbor-derive = "0.7"
-kelk-derive = "0.2.0"
-doc-comment = "0.3"
-
+minicbor = { version = "0.18", features = ["half", "derive", "alloc"] }
 
 [dev-dependencies]
-doc-comment = "0.3"
 wasm-bindgen-test = "0.3"
