--- a/crates/kelk/Cargo.toml
+++ b/crates/kelk/Cargo.toml
@@ -12,6 +12,5 @@ description = "Kelk is the standard librry for wasm based contracts in Zarb bloc
 [dependencies]
 kelk-env = { path = "../env" }
 kelk-derive = { path = "../derive" }
-
+minicbor = { version = "0.18", features = ["half", "derive", "alloc"] }
 doc-comment = "0.3"
-
