--- a/crates/kelk/Cargo.toml
+++ b/crates/kelk/Cargo.toml
@@ -14,4 +14,4 @@ kelk-env = { path = "../env" }
 kelk-derive = { path = "../derive" }
 minicbor = { version = "0.18", features = ["half", "derive", "alloc"] }
 doc-comment = "0.3"
-rand = "0.4"
+rand = { version = "0.8", features = ["small_rng"], default-features = false }
