--- a/.github/workflows/x86-64.yml
+++ b/.github/workflows/x86-64.yml
@@ -21,7 +21,7 @@ jobs:
         run: curl -LsSf https://github.com/taiki-e/cargo-llvm-cov/releases/latest/download/cargo-llvm-cov-x86_64-unknown-linux-gnu.tar.gz | tar xzf - -C ~/.cargo/bin
 
       - name: Generate code coverage
-        run: cargo +nightly llvm-cov --all-features --workspace --lcov --output-path lcov.info
+        run: cargo +nightly llvm-cov --all-features --workspace --lcov --output-path lcov.info --ignore-filename-regex mock
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
