--- a/examples/token/Cargo.toml
+++ b/examples/token/Cargo.toml
@@ -2,6 +2,8 @@
 name = "token"
 version = "0.1.0"
 edition = "2021"
+publish = false
+authors = ["Zarb development team <admin@zarb.network>"]
 
 
 [dependencies]
