Adding ERC20 struct with allowance map

--- a/.github/workflows/x86-64.yml
+++ b/.github/workflows/x86-64.yml
@@ -34,3 +34,6 @@ jobs:
 
       - name: Clippy check
         run: cargo +nightly clippy --all-features -- -D warnings
+
+      - name: Cargo test
+        run: cargo +nightly test
